// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests Reserve Section Details Screen Tests rendering Get Section Details api responses Renders Location Details activity indicator when waiting for an api response 1`] = `
<ActivityIndicator
  animating={true}
  color="#0071e9"
  hidesWhenStopped={true}
  size="large"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;

exports[`Tests Reserve Section Details Screen Tests rendering Get Section Details api responses Renders Location Details error message 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </ForwardRef>
</View>
`;

exports[`Tests Reserve Section Details Screen Tests rendering Reserve Section details screen data Renders List Empty Component if palletDetails returns with no data 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ForwardRef
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 28,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text>
          [missing "en.LOCATION.RESERVE_EMPTY" translation]
        </Text>
      </View>
    }
    data={Array []}
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
</View>
`;

exports[`Tests Reserve Section Details Screen Tests rendering Reserve Section details screen data Renders List Empty Component if sectionDetails returns with no data 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ForwardRef
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 28,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text>
          [missing "en.LOCATION.RESERVE_EMPTY" translation]
        </Text>
      </View>
    }
    data={
      Array [
        Object {
          "id": 1,
          "items": Array [
            Object {
              "itemDesc": "Nature Valley Honey Nut Granola Bars",
              "itemNbr": 500252,
              "price": 0,
            },
            Object {
              "itemDesc": "Cabbage",
              "itemNbr": 123456,
              "price": 0,
            },
          ],
          "statusCode": 200,
        },
        Object {
          "id": 123,
          "items": Array [
            Object {
              "itemDesc": "Nature Valley Granola Bars",
              "itemNbr": 456789,
              "price": 1298,
            },
          ],
          "statusCode": 200,
        },
        Object {
          "id": 456,
          "items": Array [
            Object {
              "itemDesc": "MM电池5号24粒.",
              "itemNbr": 123789,
              "price": 29.9,
            },
          ],
          "statusCode": 200,
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
</View>
`;

exports[`Tests Reserve Section Details Screen Tests rendering Reserve Section details screen data Renders Reserve Details Screen with Mock Reserve Items 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ForwardRef
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 28,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text>
          [missing "en.LOCATION.RESERVE_EMPTY" translation]
        </Text>
      </View>
    }
    data={
      Array [
        Object {
          "id": 1,
          "items": Array [
            Object {
              "itemDesc": "Nature Valley Honey Nut Granola Bars",
              "itemNbr": 500252,
              "price": 0,
            },
            Object {
              "itemDesc": "Cabbage",
              "itemNbr": 123456,
              "price": 0,
            },
          ],
          "palletCreateTS": "2021-01-01",
          "palletId": 1,
          "statusCode": 200,
        },
        Object {
          "id": 123,
          "items": Array [
            Object {
              "itemDesc": "Nature Valley Granola Bars",
              "itemNbr": 456789,
              "price": 1298,
            },
          ],
          "palletCreateTS": "2021-01-10",
          "palletId": 123,
          "statusCode": 200,
        },
        Object {
          "id": 456,
          "items": Array [
            Object {
              "itemDesc": "MM电池5号24粒.",
              "itemNbr": 123789,
              "price": 29.9,
            },
          ],
          "palletCreateTS": "1999-10-10",
          "palletId": 456,
          "statusCode": 200,
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
</View>
`;
